# Resolver Changelog

### 1.4.2

* Fix threading issue in LazyInjected and WeakLazyInjected property wrappers

### 1.4.1

* Fix bug forwarding new argument structure from factory to factory - PR#89

### 1.4.0

* Updated registration and resolution lock/unlock stratagies for better thread safety and performance.
* Updated automatic service registration code for better performance and to use new locking mechanisms.
* Moved default scopes from Resolver to ResolverScope for better autocompletion.
* Added .name(fromString:) to Resolver.Name to handle passing string variables.

### 1.3.0

* Add Name spaces - Based on PR#83
* Fix protocol issue in WeakLazyInjected property wrapper
* Update Resolver.reset to also reset known caches.

### 1.2.1

* Fix autorelease bug in WeakLazyInjected property wrapper

### 1.2

* Rewrite argument passing code to support multiple arguments
* Add @WeakLazyInjected property wrapper
* Update Cyclic Dependencies and Annotation documentation
* Fix to build on Linux - PR#75
* Fix to build dynamically using SPM - PR#71
* Fix issue with hierarchical containers - PR#50
* Add tvOS deployment target for Cocoapods - PR#56

### 1.1.4

* Add Resolver.reset() function to reset Resolver to original state

### 1.1.3

* Add @OptionalInjected property wrapper
* Fixed Empty CURRENT_PROJECT_VERSION variable.
* Mark framework to use application extension safe api only
* Use fatalError message instead of print

### 1.1.2

* Add @InjectedObject property wrapper for SwiftUI support
* Ensure proper initialization of pthread mutexes
* Add missing public keyword to registerAllServices() method
* Expand supported platforms to include macOS, tvOS, and watchOS
* Set minimum supported platform on iOS to iOS 11

### 1.1.1

* Fix project file issue for cocoapod support.

### 1.1.0

* Update project for Swift 5.1 and SPM
* Add @Injected property wrapper for Swift 5.1
* Add @LazyInjected property wrapper for Swift 5.1
* Revise unit tests for more code coverage